# enterprise-document-intelligence

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/processed/: indexed_chunks.pkl
scripts/: debug_env_key.py  debug_environment.py  debug_python_curl.py  debug_python_curl_verbose.py  index_documents.py  inspect_chunks.py  inspect_indexed_chunks.py  inspect_text.py  test_chunker.py  test_cleaner.py  test_compare_context.py  test_compare_extractor.py  test_compare_retriever.py  test_compare_service.py  test_conflict_service.py  test_create_collection.py  test_docling.py  test_document_metadata.py  test_embeddings.py  test_graph.py  test_httpx.py  test_hybrid.py  test_llm.py  test_loader.py  test_multi_query.py  test_openai.py  test_rag_pipeline.py  test_requests.py  test_reranker.py  test_retrieved_pages.py  test_retriever.py  test_router.py  test_search_node.py  test_search_tool.py  test_section_parser.py  test_settings.py  test_summarize_service.py  test_unstructured.py  test_vector_store.py
src/enterprise_document_intelligence/agents/: base_agent.py  graph.py  schema.py  state.py
src/enterprise_document_intelligence/api/: app.py  dependencies.py  routes.py  schemas.py
src/enterprise_document_intelligence/compare/: context_builder.py  extractor.py  retriever.py  schema.py  service.py
src/enterprise_document_intelligence/conflict/: service.py
src/enterprise_document_intelligence/core/: config.py  enums.py  llm.py  llm_utils.py
src/enterprise_document_intelligence/ingestion/: chunker.py  cleaner.py  filter.py  loader.py  (+1 more)
(+34 files in other folders)
